<resources>
    <string name="app_name">Clusive</string>
    <string name="play_inclusion_tiles">Play Inclusion Tiles</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_msg">We\'re so glad you\'re here! The following game will be a nice warmup to get you started. </string>
    <string name="welcome_header">Someone Challenged You!</string>
    <string name="show_result">Show Result</string>
    <string name="your_result">Your Result</string>
    <string name="start_journey">Start Journey</string>
    <string name="inclusion_farmer">Inclusion Hall of Farmer</string>
    <string name="inclusion_rookie">Inclusion \nRookie</string>
    <string name="inclusion_champion">Inclusion \nChampion</string>
    <string name="inclusion_captain">Inclusion \nCaptain</string>
    <string name="inclusion_pro">Inclusion \nPro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>