<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_result"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="sans-serif-medium"
        android:textSize="12sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Inclusion Champion"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/welcome"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Lorem ipsum this is juat a dummy text which will be replaced later."
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_journey"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_round_rect"
        app:backgroundTint="@color/black"
        android:layout_margin="20dp"/>
</LinearLayout>